provisioning/apps/overlays/k3d-dev/node-red/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-operator-traefik-forward-auth@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
  - host: node-red.k3d-dev.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-red-svc
            port:
              number: 1880

  tls:
  - hosts:
    - node-red.k3d-dev.lessingstrasse.org
    secretName: node-red.k3d-dev.lessingstrasse.org
